--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   geth-boot:
-    build: geth-boot
+    image: geth-boot
     command: ' --nodekey "/privatechain/bootnode.key" --verbosity=3'
     networks:
       overlay:
@@ -14,8 +14,8 @@ services:
     restart: always
 
   geth-exposed:
-    build: geth-miner
-    command: '--datadir "./privatechain" --verbosity=3 --ethash.dagdir="/privatechain/.ethash" --rpc --rpcaddr="0.0.0.0" --rpcport=8545 --rpcapi "eth,web3,personal,net,debug,admin" --rpccorsdomain="*" --mine --minerthreads=1 --networkid=65534 --bootnodes="enode://5076491b883428eeafb09b1fa431c80621b938cb7b0653c3d8c8438007f36e2379a83a3bebae25ca1fb89f0e58e96282cb2ae04dc6124308108a7b2ca181b396@172.16.0.2:30301"'
+    image: geth-exposed
+    command: '--datadir "./privatechain" --verbosity=3 --ethash.dagdir="/privatechain/.ethash" --rpc --rpcaddr="0.0.0.0" --rpcport=8545 --rpcapi "eth,web3,personal,net,debug,admin" --rpccorsdomain="*" --mine --minerthreads=1 --networkid=4224 --bootnodes="enode://5076491b883428eeafb09b1fa431c80621b938cb7b0653c3d8c8438007f36e2379a83a3bebae25ca1fb89f0e58e96282cb2ae04dc6124308108a7b2ca181b396@172.16.0.2:30301"'
     ports:
       - "8545:8545"
       - "30303:30303"
@@ -30,7 +30,7 @@ services:
 
   geth-miner:
     build: geth-miner
-    command: '--datadir "./privatechain" --verbosity=3 --ethash.dagdir="/privatechain/.ethash" --rpc --rpcaddr="0.0.0.0" --rpcport=8545 --rpcapi "eth,web3,personal,net,debug,admin" --rpccorsdomain="*" --mine --minerthreads=1 --networkid=65534 --bootnodes="enode://5076491b883428eeafb09b1fa431c80621b938cb7b0653c3d8c8438007f36e2379a83a3bebae25ca1fb89f0e58e96282cb2ae04dc6124308108a7b2ca181b396@172.16.0.2:30301"'
+    command: '--datadir "./privatechain" --verbosity=3 --ethash.dagdir="/privatechain/.ethash" --rpc --rpcaddr="0.0.0.0" --rpcport=8545 --rpcapi "eth,web3,personal,net,debug,admin" --rpccorsdomain="*" --mine --minerthreads=1 --networkid=4224 --bootnodes="enode://5076491b883428eeafb09b1fa431c80621b938cb7b0653c3d8c8438007f36e2379a83a3bebae25ca1fb89f0e58e96282cb2ae04dc6124308108a7b2ca181b396@172.16.0.2:30301"'
     environment:
       - TZ=Europe/Zurich
     depends_on:
