--- a/geth-boot/Dockerfile
+++ b/geth-boot/Dockerfile
@@ -1,10 +1,5 @@
 # take geth image with alltools (bootstrap tool)
-FROM ethereum/client-go:alltools-v1.8.13
-
-# set timezone for  apline image
-RUN apk --no-cache add tzdata
-RUN cp /usr/share/zoneinfo/Europe/Zurich /etc/localtime
-RUN echo "Europe/Zurich" >  /etc/timezone
+FROM ffaerber/go-ethereum:latest
 
 # create local data directory for geth
 RUN mkdir /privatechain
