--- a/geth-miner/Dockerfile
+++ b/geth-miner/Dockerfile
@@ -1,9 +1,4 @@
-FROM ethereum/client-go:alltools-v1.8.13
-
-# set timezone for  apline image 
-RUN apk --no-cache add tzdata
-RUN cp /usr/share/zoneinfo/Europe/Zurich /etc/localtime
-RUN echo "Europe/Zurich" >  /etc/timezone
+FROM ffaerber/go-ethereum:latest
 
 # create local directory
 RUN mkdir /privatechain
@@ -17,5 +12,5 @@ RUN geth --datadir "/privatechain" init /privatechain/genesis.json
 RUN geth --datadir "/privatechain" --password /privatechain/passfile account new | awk -F '[{}]' '{print $(NF-1)}' > /privatechain/accID
 RUN mkdir /privatechain/.ethash
 
-# define entry point 
+# define entry point
 ENTRYPOINT ["geth"]
